--- a/Hackathon_Sample_Code_(1)_Reference.ipynb
+++ b/Hackathon_Sample_Code_(1)_Reference.ipynb
@@ -1,105 +1,32 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Hackathon!\n",
-    "## Restaurant Turnover Prediction\n",
-    "The predicted Annual Turnover for each restaurant in the Test dataset will be compared with the actual Annual Turnover to calculate the RMSE value of the entire prediction. The lower the RMSE value, the better the model will be.\n",
-    "\n",
-    "### Rules\n",
-    "* The measure of accuracy will be RMSE (Root mean square error).\n",
-    "* Submission File Format: You are to submit a  '.csv' file with exactly 500 entries plus a header row. The file should have exactly two columns.\n",
-    "\n",
-    "---\n",
-    "---\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "| Author Project Submission| Date |\n",
-    "| --- | --- |\n",
-    "| Rob Barker | July 28, 2024 | "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
+   "execution_count": 78,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-09-16T14:08:47.244579Z",
+     "start_time": "2020-09-16T14:08:47.236547Z"
     }
-   ],
-   "source": [
-    "# Installing the libraries with the specified version.\n",
-    "#!pip install numpy==1.25.2 pandas==1.5.3 matplotlib==3.7.1 seaborn==0.13.1 scikit-learn==1.2.2 sklearn-pandas==2.2.0 -q --user\n",
-    "\n",
-    "# Visual Studio Code implementation using %pip.\n",
-    "%pip install numpy==1.25.2 pandas==1.5.3 matplotlib==3.7.1 seaborn==0.13.1 scikit-learn==1.2.2 sklearn-pandas==2.2.0 -q --user"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   },
    "outputs": [],
    "source": [
-    "# Libraries to help with reading and manipulating data.\n",
+    "## Importing the libraries\n",
+    "\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "\n",
-    "# libaries to help with data visualization.\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
-    "# Libraries to help with data preprocessing.\n",
-    "import matplotlib.patches as mpatches\n",
-    "from matplotlib.ticker import FuncFormatter\n",
-    "\n",
-    "# Removes the limit for the number of displayed columns.\n",
-    "pd.set_option(\"display.max_columns\", None)\n",
-    "# Sets the limit for the number of displayed rows.\n",
-    "pd.set_option(\"display.max_rows\", 200)\n",
-    "\n",
-    "# Library to split data.\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "# To build model for prediction.\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn import tree\n",
-    "\n",
-    "# To tune different models.\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "\n",
-    "# To get diferent metric scores.\n",
-    "from sklearn.metrics import (\n",
-    "    f1_score,\n",
-    "    accuracy_score,\n",
-    "    recall_score,\n",
-    "    precision_score,\n",
-    "    confusion_matrix,\n",
-    "    make_scorer,\n",
-    "    classification_report,\n",
-    ")\n",
-    "\n",
-    "# Suppress warnings (FutureWarning).\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\", category= FutureWarning)"
+    "from sklearn.linear_model import LinearRegression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading the Training Data and using the Training Data to build the Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-16T13:19:51.066441Z",
@@ -130,62 +57,207 @@
        "      <th></th>\n",
        "      <th>Registration Number</th>\n",
        "      <th>Annual Turnover</th>\n",
+       "      <th>Cuisine</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Restaurant Location</th>\n",
+       "      <th>Opening Day of Restaurant</th>\n",
+       "      <th>Facebook Popularity Quotient</th>\n",
+       "      <th>Endorsed By</th>\n",
+       "      <th>Instagram Popularity Quotient</th>\n",
+       "      <th>Fire Audit</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Overall Restaurant Rating</th>\n",
+       "      <th>Live Music Rating</th>\n",
+       "      <th>Comedy Gigs Rating</th>\n",
+       "      <th>Value Deals Rating</th>\n",
+       "      <th>Live Sports Rating</th>\n",
+       "      <th>Ambience</th>\n",
+       "      <th>Lively</th>\n",
+       "      <th>Service</th>\n",
+       "      <th>Comfortablility</th>\n",
+       "      <th>Privacy</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>20001</td>\n",
-       "      <td>25000000</td>\n",
+       "      <td>60001</td>\n",
+       "      <td>42000000</td>\n",
+       "      <td>indian,irish</td>\n",
+       "      <td>Bangalore</td>\n",
+       "      <td>Near Business Hub</td>\n",
+       "      <td>14-02-2009</td>\n",
+       "      <td>84.3</td>\n",
+       "      <td>Not Specific</td>\n",
+       "      <td>95.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>20002</td>\n",
-       "      <td>25000000</td>\n",
+       "      <td>60002</td>\n",
+       "      <td>50000000</td>\n",
+       "      <td>indian,irish</td>\n",
+       "      <td>Indore</td>\n",
+       "      <td>Near Party Hub</td>\n",
+       "      <td>29-09-2008</td>\n",
+       "      <td>85.4</td>\n",
+       "      <td>Tier A Celebrity</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>20003</td>\n",
-       "      <td>25000000</td>\n",
+       "      <td>60003</td>\n",
+       "      <td>32500000</td>\n",
+       "      <td>tibetan,italian</td>\n",
+       "      <td>Chennai</td>\n",
+       "      <td>Near Business Hub</td>\n",
+       "      <td>30-07-2011</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>Tier A Celebrity</td>\n",
+       "      <td>68.2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>20004</td>\n",
-       "      <td>25000000</td>\n",
+       "      <td>60004</td>\n",
+       "      <td>110000000</td>\n",
+       "      <td>turkish,nigerian</td>\n",
+       "      <td>Gurgaon</td>\n",
+       "      <td>Near Party Hub</td>\n",
+       "      <td>30-11-2008</td>\n",
+       "      <td>85.6</td>\n",
+       "      <td>Tier A Celebrity</td>\n",
+       "      <td>83.6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>20005</td>\n",
-       "      <td>25000000</td>\n",
+       "      <td>60005</td>\n",
+       "      <td>20000000</td>\n",
+       "      <td>irish,belgian</td>\n",
+       "      <td>Manesar</td>\n",
+       "      <td>Near Party Hub</td>\n",
+       "      <td>22-02-2010</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Tier A Celebrity</td>\n",
+       "      <td>76.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 34 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Registration Number  Annual Turnover\n",
-       "0                20001         25000000\n",
-       "1                20002         25000000\n",
-       "2                20003         25000000\n",
-       "3                20004         25000000\n",
-       "4                20005         25000000"
+       "   Registration Number  Annual Turnover           Cuisine       City  \\\n",
+       "0                60001         42000000      indian,irish  Bangalore   \n",
+       "1                60002         50000000      indian,irish     Indore   \n",
+       "2                60003         32500000   tibetan,italian    Chennai   \n",
+       "3                60004        110000000  turkish,nigerian    Gurgaon   \n",
+       "4                60005         20000000     irish,belgian    Manesar   \n",
+       "\n",
+       "  Restaurant Location Opening Day of Restaurant  Facebook Popularity Quotient  \\\n",
+       "0   Near Business Hub                14-02-2009                          84.3   \n",
+       "1      Near Party Hub                29-09-2008                          85.4   \n",
+       "2   Near Business Hub                30-07-2011                          85.0   \n",
+       "3      Near Party Hub                30-11-2008                          85.6   \n",
+       "4      Near Party Hub                22-02-2010                           NaN   \n",
+       "\n",
+       "        Endorsed By  Instagram Popularity Quotient  Fire Audit  ...  \\\n",
+       "0      Not Specific                           95.8           1  ...   \n",
+       "1  Tier A Celebrity                           85.0           1  ...   \n",
+       "2  Tier A Celebrity                           68.2           1  ...   \n",
+       "3  Tier A Celebrity                           83.6           0  ...   \n",
+       "4  Tier A Celebrity                           76.8           1  ...   \n",
+       "\n",
+       "   Overall Restaurant Rating  Live Music Rating  Comedy Gigs Rating  \\\n",
+       "0                       10.0                4.0                 NaN   \n",
+       "1                        9.0                NaN                 4.0   \n",
+       "2                        8.0                3.0                 NaN   \n",
+       "3                        9.0                6.0                 NaN   \n",
+       "4                        6.0                NaN                 2.0   \n",
+       "\n",
+       "   Value Deals Rating  Live Sports Rating Ambience Lively  Service  \\\n",
+       "0                 NaN                 NaN      8.0      8        6   \n",
+       "1                 NaN                 NaN      5.0      7        7   \n",
+       "2                 NaN                 NaN      7.0     10        5   \n",
+       "3                 NaN                 NaN      7.0      7        4   \n",
+       "4                 NaN                 NaN      NaN      6        2   \n",
+       "\n",
+       "   Comfortablility  Privacy  \n",
+       "0                6        6  \n",
+       "1                3        8  \n",
+       "2                2        8  \n",
+       "3                3        5  \n",
+       "4                4        6  \n",
+       "\n",
+       "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Read the dataset from the Loan_Modelling.csv file locally. Pandas DataFrame object \n",
-    "# assigned to personal_loan_df.\n",
-    "hackathon_org_df = pd.read_csv(\"/Users/barkz/Desktop/github-barkz/Restaurant-Turnover-Prediction/Sample_Solution_(1).csv\")\n",
-    "\n",
-    "# Create a copy of the original DataFrame to avoid modifying the original data.\n",
-    "hackathon_df = hackathon_org_df.copy()\n",
-    "\n",
-    "# Display the first 5 rows of the DataFrame.\n",
-    "hackathon_df.head(5)"
+    "df_train = pd.read_csv('D:/Hackathon/Train dataset.csv')\n",
+    "df_train.head()"
    ]
   },
   {
@@ -1182,7 +1254,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1196,7 +1268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.7.4"
   },
   "toc": {
    "base_numbering": 1,
