--- a/TeamPi_Hackathon_Project.ipynb
+++ b/TeamPi_Hackathon_Project.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 102,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-16T13:19:51.066441Z",
@@ -278,7 +278,7 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 104,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-16T13:19:59.753437Z",
@@ -586,7 +586,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +709,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -1062,7 +1062,7 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -1293,7 +1293,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 110,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-16T13:13:45.659151Z",
@@ -1536,7 +1536,7 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1558,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -1613,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1839,7 +1839,7 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1849,9 +1849,15 @@
     "SI = SimpleImputer(strategy='mean')\n",
     "\n",
     "# Fit the imputer on the 'Instagram Popularity Quotient' column.\n",
+    "#SI.fit(hackathon_train_df[['Instagram Popularity Quotient']])\n",
+    "\n",
+    "# Fit the imputer on the 'Instagram Popularity Quotient' column.\n",
     "SI.fit(hackathon_train_df[['Instagram Popularity Quotient']])\n",
     "\n",
     "# Transform the column to replace missing values with the mean.\n",
+    "#hackathon_train_df['Instagram Popularity Quotient'] = SI.transform(hackathon_train_df[['Instagram Popularity Quotient']])\n",
+    "\n",
+    "# Fit the imputer on the 'Instagram Popularity Quotient' column.\n",
     "hackathon_train_df['Instagram Popularity Quotient'] = SI.transform(hackathon_train_df[['Instagram Popularity Quotient']])\n",
     "\n",
     "# Print the first 5 rows of hackathon_train_df after imputation.\n",
@@ -1861,7 +1867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -1916,7 +1922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -1951,7 +1957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -1993,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -2219,7 +2225,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2238,7 +2244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 116,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-16T13:27:49.517810Z",
@@ -2285,7 +2291,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2297,7 +2303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -2454,13 +2460,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Saving the output in a data frame and then exporting it to a '.csv' file with the appropriate 'Registration Number'."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 123,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-16T13:38:44.072923Z",
@@ -2559,7 +2570,7 @@
        "[500 rows x 1 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2571,7 +2582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 124,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-16T13:40:01.957550Z",
@@ -2682,7 +2693,7 @@
        "[500 rows x 2 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2695,7 +2706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 125,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-16T14:08:38.203042Z",
@@ -2706,14 +2717,14 @@
    "source": [
     "# Setting the directory to export the file as a '.csv' file.\n",
     "import os\n",
-    "location = '/Users/robbarker/Desktop/Restaurant-Turnover-Prediction'\n",
+    "location = '/Users/barkz/Desktop/github-barkz/Restaurant-Turnover-Prediction'\n",
     "os.chdir(location)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 126,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-16T14:07:06.368811Z",
@@ -2724,7 +2735,7 @@
    "source": [
     "# Exporting the data frame to a '.csv' file and setting the index = False as we do want the index.\n",
     "\n",
-    "solution_df.to_csv('TeamPi_Hackathon_Project.csv',index=False)"
+    "solution_df.to_csv('TeamPi_Hackathon_Project_7.csv',index=False)"
    ]
   },
   {
@@ -2740,6 +2751,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
   },
   "toc": {
    "base_numbering": 1,
